cmake_minimum_required(VERSION 3.26)
project(C_tutorial C)

set(CMAKE_C_STANDARD 11)

add_executable(C_tutorial 1.1_Helloworld.c)
add_executable(1.2_Variables 1.2_Variables.c)
add_executable(1.3_printf 1.3_printf_scanf.c)
add_executable(2.1_arithmetic 2.1_expression.c)
add_executable(2.2_statements 2.2_statements.c)
add_executable(2.3_loops 2.3_loops.c)
add_executable(3.1_integers 3.1_integers.c)